# cvml-practicum-cv

./: .gitignore  CMakeLists.txt  main.cpp
